# CottonOs

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  rust-toolchain.toml  x86_64-cotton_os.json
.cargo/: config.toml
src/: animation.rs  devices.rs  keyboard.rs  lib.rs  main.rs  vga_buffer.rs
