[package]
name = "cotton_os"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]

[dependencies]
bootloader = "0.9.23"
spin = "0.9.8"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
volatile = "0.2.7"  # Changed from 0.4.6 to 0.2.7
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
